fixed contrasting color

--- a/lake_styles.css
+++ b/lake_styles.css
@@ -85,7 +85,7 @@ body aside:nth-of-type(2) h2{
    font-family: Champagne,sans-serif;
 }
 body aside:nth-of-type(2){
-   background-color:;
+   background-color:rgba(238, 150, 49, 0.808);
    height: 15em;
 }
 body aside:nth-of-type(1){
